# Sima-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.c  triangle-sapp.glsl
include/: STDImage.h  game_object.h  mesh.h  render.h  script.h  sprite.h  texture.h
shaders/: triangle-sapp.glsl.h
src/: game_object.c  mesh.c  render.c  script.c  sprite.c  texture.c
